--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="light">#fefefe</color>
     <color name="light1">#edf0f2</color>
     <color name="light2">#d2dbe0</color>
+    <color name="light3">#a1a9ae</color>
     <color name="colorPrimary">#344955</color>
     <color name="colorPrimaryDark">#232f34</color>
     <color name="colorPrimaryLight">#4a6572</color>
@@ -12,9 +13,10 @@
     <color name="redLight">#e57373</color>
     <color name="redDark">#d32f2f</color>
     <!--Status-->
-    <color name="status">@color/light1</color>
+    <color name="status">@color/light3</color>
     <!--BackGround-->
     <color name="backGround">@color/light1</color>
+    <color name="tabBack">@color/colorPrimary</color>
     <!--Dialog-->
     <color name="dialogBack">@color/dark</color>
     <color name="dialogText">@color/light</color>
