--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layoutDirection="rtl"
-    android:orientation="vertical"
     android:background="@color/backGround"
-    tools:context=".view.main.ActivityMain">
+  >
 
     <androidx.appcompat.widget.ContentFrameLayout
             android:layout_weight="1"
@@ -18,6 +16,7 @@
     </androidx.appcompat.widget.ContentFrameLayout>
 
     <ir.pepotec.app.awesomeapp.view.main.CustomBottomNav
+            android:layout_alignParentBottom="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -26,4 +25,4 @@
             android:layout_margin="8dp"
             android:padding="4dp"
     />
-</LinearLayout>
+</RelativeLayout>
