--- a/app/src/main/res/layout/dialog_get_user_text.xml
+++ b/app/src/main/res/layout/dialog_get_user_text.xml
@@ -46,7 +46,7 @@
                     android:layout_marginBottom="32dp"
                     android:text="@string/btnSave"
                     android:textColor="@color/dialogBtnText"
-                    android:background="@drawable/dialog_btn"
+                    android:backgroundTint="@color/colorAccent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
             <Button
@@ -58,7 +58,7 @@
                     android:layout_marginBottom="32dp"
                     android:text="@string/btnCancel"
                     android:textColor="@color/dialogBtnText"
-                    android:background="@drawable/dialog_btn"
+                    android:backgroundTint="@color/colorAccent"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"/>
 
