--- a/app/src/main/res/layout/dialog_social_link.xml
+++ b/app/src/main/res/layout/dialog_social_link.xml
@@ -68,6 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <Button
+                android:backgroundTint="@color/colorAccent"
                 android:textSize="@dimen/txt"
                 android:text="@string/btnSave"
                 android:layout_weight="1"
@@ -76,10 +77,10 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
                 android:textColor="@color/dialogBtnText"
-                android:background="@drawable/dialog_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
         <Button
+                android:backgroundTint="@color/colorAccent"
                 android:textSize="@dimen/txt"
                 android:text="@string/btnCancel"
                 android:layout_weight="1"
@@ -88,7 +89,6 @@
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="32dp"
                 android:textColor="@color/dialogBtnText"
-                android:background="@drawable/dialog_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
     </LinearLayout>
