--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layoutDirection="rtl"
-    android:background="@color/backGround"
-  >
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layoutDirection="rtl"
+        android:background="@color/backGround"
+>
 
     <androidx.appcompat.widget.ContentFrameLayout
             android:layout_weight="1"
@@ -15,14 +15,21 @@
             android:id="@+id/ContentMain">
     </androidx.appcompat.widget.ContentFrameLayout>
 
-    <ir.pepotec.app.awesomeapp.view.main.CustomBottomNav
-            android:layout_alignParentBottom="true"
+    <com.google.android.material.bottomappbar.BottomAppBar
+            android:layoutDirection="ltr"
+            android:backgroundTint="@color/colorPrimary"
+            app:titleTextColor="@color/light"
+            app:subtitleTextColor="@color/light"
+            android:id="@+id/barMain"
+            android:layout_gravity="bottom"
+            app:fabAlignmentMode="center"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:id="@+id/bottomNavMain"
-            android:background="@color/colorPrimaryDark"
-            android:layout_margin="8dp"
-            android:padding="4dp"
-    />
-</RelativeLayout>
+            android:layout_height="wrap_content">
+    </com.google.android.material.bottomappbar.BottomAppBar>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            app:layout_anchor="@id/barMain"
+            app:srcCompat="@drawable/ic_android"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
