complete ability view and user{presenter,model}

--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -52,17 +52,17 @@
                             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                             app:hintEnabled="true"
                             app:hintTextColor="@color/light1"
-                            android:hint="شماره دانشجویی"
+                            android:hint="شماره همراه"
                             app:counterEnabled="true"
-                            app:counterMaxLength="7"
+                            app:counterMaxLength="11"
                             app:boxStrokeColor="@color/colorAccent"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" android:textColorHint="@color/colorPrimaryLight"
                             app:counterTextColor="@color/light1">
                         <com.google.android.material.textfield.TextInputEditText
-                                android:id="@+id/txtStudentIdLogIn"
-                                android:maxLength="7"
-                                android:inputType="number"
+                                android:id="@+id/txtPhoneLogIn"
+                                android:maxLength="11"
+                                android:inputType="phone"
                                 android:textColor="@color/light"
                                 android:textSize="@dimen/txt"
                                 android:layout_width="match_parent"
