--- a/app/src/main/res/drawable/ic_tel.xml
+++ b/app/src/main/res/drawable/ic_tel.xml
@@ -4,10 +4,17 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-    android:strokeWidth="1"
+            android:strokeWidth="0.5"
+            android:strokeColor="@color/dark"
+            android:strokeLineJoin="round"
+            android:strokeLineCap="round"
+            android:pathData="M4,8 L4,4 L8,4"
+    />
+    <path
+    android:strokeWidth="0.5"
     android:strokeColor="@color/colorAccent"
     android:strokeLineJoin="round"
     android:strokeLineCap="round"
-    android:pathData="M0,0"
+    android:pathData="M4,8 C 4,4 4,4 8,4"
     />
 </vector>
