--- a/app/src/main/res/layout/fragment_chat_contact.xml
+++ b/app/src/main/res/layout/fragment_chat_contact.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/colorPrimaryDark"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/RVChatContact"
         android:layoutDirection="rtl"
