--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -5,6 +5,7 @@
         android:layoutDirection="rtl"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/ic_back_chat"
 >
     <LinearLayout
             android:background="@color/light"
