--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+              android:background="@color/colorPrimaryDark"
+              android:orientation="vertical"
               android:layoutDirection="rtl"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
@@ -19,13 +20,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp">
         </ir.pepotec.app.awesomeapp.view.student.profile.ProfileHead>
-        <ImageView
-                android:id="@+id/ELProfileImage"
-                android:layout_alignBottom="@id/profileHead"
-                android:layout_centerHorizontal="true"
-                app:srcCompat="@drawable/ic_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
     </RelativeLayout>
     <LinearLayout
             android:gravity="center_horizontal"
@@ -41,7 +35,7 @@
                     android:padding="8dp"
                     android:layout_marginTop="16dp"
                     android:textSize="@dimen/txt"
-                    android:textColor="@color/colorPrimaryLight"
+                    android:textColor="@color/light"
                     android:text="9431443"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -51,7 +45,7 @@
                     android:padding="8dp"
                     android:layout_marginTop="8dp"
                     android:textSize="@dimen/txt"
-                    android:textColor="@color/colorPrimaryLight"
+                    android:textColor="@color/light"
                     android:drawableEnd="@drawable/ic_eye"
                     android:text="مصطفی قنبری"
                     android:drawablePadding="16dp"
@@ -63,25 +57,13 @@
                     android:padding="8dp"
                     android:layout_marginTop="8dp"
                     android:textSize="@dimen/txt"
-                    android:textColor="@color/colorPrimaryLight"
+                    android:textColor="@color/light"
                     android:drawableEnd="@drawable/ic_eye"
                     android:text="09157474087"
                     android:drawablePadding="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/txtMyPhone"/>
-            <TextView
-                    android:gravity="center"
-                    android:padding="8dp"
-                    android:layout_marginTop="8dp"
-                    android:textSize="@dimen/txt"
-                    android:textColor="@color/colorPrimaryLight"
-                    android:drawableEnd="@drawable/ic_keyboard_arrow_down"
-                    android:text="آیدی صفحات مجازی"
-                    android:drawablePadding="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/txtSocilaListMyProfile"/>
         </LinearLayout>
         <LinearLayout
                 android:orientation="horizontal"
@@ -119,19 +101,5 @@
                           android:text="درباره من" android:textColor="@color/dark"/>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
-        <androidx.cardview.widget.CardView
-                app:cardBackgroundColor="@color/colorAccent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" android:layout_marginBottom="16dp"
-                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:id="@+id/btnMessageForMi">
-            <TextView
-                    android:drawableStart="@drawable/ic_contact_perm"
-                    android:drawablePadding="16dp"
-                    android:padding="8dp"
-                    android:text="چه کسانی می توانند به شما پیام دهند"
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent" android:textColor="@color/dark"/>
-        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </LinearLayout>
