--- a/app/src/main/res/layout/item_chat_contact.xml
+++ b/app/src/main/res/layout/item_chat_contact.xml
@@ -7,10 +7,13 @@
 >
 <androidx.cardview.widget.CardView
         android:layoutDirection="rtl"
-        android:layout_marginBottom="0.5dp"
-        app:cardBackgroundColor="@color/light"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
         android:orientation="vertical"
-        app:cardCornerRadius="@dimen/radiusVSmall"
+        app:cardCornerRadius="@dimen/radius"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     <LinearLayout
@@ -20,7 +23,7 @@
             android:layout_height="wrap_content">
 
         <ir.pepotec.app.awesomeapp.view.uses.CircularIMG
-                android:layout_margin="16dp"
+                android:layout_marginEnd="16dp"
                 app:srcCompat="@drawable/img"
                 android:layout_width="@dimen/img"
                 android:layout_height="@dimen/img"/>
@@ -28,16 +31,16 @@
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
             <TextView
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/light"
                     android:padding="8dp"
                     android:text="9431443"
-                    android:textSize="@dimen/txt"
+                    android:textSize="@dimen/txtSmall"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             <TextView
-                    android:textColor="@color/colorPrimaryLight"
+                    android:textColor="@color/light1"
                     android:padding="8dp"
                     android:text="سلام حالت چطوره ؟ خوبی ؟ چخبر ؟ میگم رفتی همونجایی که باید میرفتی ؟ "
                     android:textSize="@dimen/txtSmall"
