--- a/app/src/main/res/layout/item_friend_list.xml
+++ b/app/src/main/res/layout/item_friend_list.xml
@@ -8,7 +8,7 @@
 <androidx.cardview.widget.CardView
         android:layoutDirection="rtl"
         android:layout_marginBottom="0.5dp"
-        app:cardBackgroundColor="@color/light"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
         android:orientation="vertical"
         app:cardCornerRadius="@dimen/radiusVSmall"
         android:layout_width="match_parent"
@@ -30,14 +30,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
             <TextView
-                    android:textColor="@color/colorPrimaryDark"
+                    android:textColor="@color/light"
                     android:padding="8dp"
                     android:text="مصطفی قنبری"
                     android:textSize="@dimen/txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             <TextView
-                    android:textColor="@color/colorPrimaryLight"
+                    android:textColor="@color/light"
                     android:padding="8dp"
                     android:text="9431443"
                     android:textSize="@dimen/txtSmall"
