--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--THEME-->
+    <color name="txtPrimary">@color/light</color>
+    <color name="txtAccent">@color/dark</color>
+    <color name="colorPrimary">#344955</color>
+    <color name="colorPrimaryDark">#232f34</color>
+    <color name="colorPrimaryLight">#4a6572</color>
+    <color name="colorAccent">#ffcc80</color>
     <!--Original-->
     <color name="dark">#17262a</color>
     <color name="light">#fefefe</color>
     <color name="light1">#edf0f2</color>
     <color name="light2">#d2dbe0</color>
     <color name="light3">#a1a9ae</color>
-    <color name="colorPrimary">#344955</color>
-    <color name="colorPrimaryDark">#232f34</color>
-    <color name="colorPrimaryLight">#4a6572</color>
-    <color name="colorAccent">#ffcc80</color>
     <color name="redLight">#e57373</color>
     <color name="redDark">#d32f2f</color>
     <!--Status-->
