--- a/app/src/main/res/layout/dialog_eye_level.xml
+++ b/app/src/main/res/layout/dialog_eye_level.xml
@@ -38,7 +38,8 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="16dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+        />
         <TextView
             android:visibility="gone"
             android:id="@+id/txtFriendDialogEL"
