--- a/app/src/main/res/layout/fragment_add_ability.xml
+++ b/app/src/main/res/layout/fragment_add_ability.xml
@@ -107,6 +107,7 @@
                             android:layout_height="wrap_content" android:id="@+id/txtDescriptAddAbility"/>
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btnSaveAddAbility"
                         android:text="@string/btnSave"
                         android:backgroundTint="@color/colorAccent"
                         android:textColor="@color/dark"
