--- a/app/src/main/res/layout/fragment_show_ability.xml
+++ b/app/src/main/res/layout/fragment_show_ability.xml
@@ -50,6 +50,7 @@
                     android:layout_width="@dimen/imgBig"
                     android:layout_height="@dimen/imgBig"/>
             <TextView
+                    android:id="@+id/txtSubjectShowAbility"
                     android:textSize="@dimen/txt"
                     android:textColor="@color/colorAccent"
                     android:text="عنوان مهارت"
@@ -69,6 +70,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
                     <TextView
+                            android:id="@+id/txtResumeShowAbility"
                             android:layout_marginBottom="16dp"
                             android:text="سوابق کاری"
                             android:background="@drawable/txt_border"
@@ -78,6 +80,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>
                     <TextView
+                            android:id="@+id/txtDescriptionShowAbility"
                             android:layout_marginBottom="32dp"
                             android:text="توضیحات"
                             android:background="@drawable/txt_border"
@@ -97,10 +100,27 @@
                             android:background="@color/colorPrimary"
                             android:layout_width="match_parent"
                             android:layout_height="1dp"/>
+                    <ProgressBar
+                            style="?android:attr/progressBarStyle"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/pBarWorkSampleList"
+                            android:layout_margin="16dp"
+                    />
+                    <TextView
+                            android:textSize="@dimen/txtSmall"
+                            android:textColor="@color/light"
+                            android:text="TextView"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/txtErrorWorkSampleList"
+                            android:layout_margin="16dp"
+                            android:visibility="gone"
+                    />
                     <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/RVWorkSample"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"/>
+                            android:layout_height="wrap_content" android:visibility="gone"/>
                     <LinearLayout
                             android:background="@color/colorPrimary"
                             android:layout_width="match_parent"
