--- a/app/src/main/res/layout/item_friend_list.xml
+++ b/app/src/main/res/layout/item_friend_list.xml
@@ -35,14 +35,14 @@
                     android:text="مصطفی قنبری"
                     android:textSize="@dimen/txt"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" android:id="@+id/txtNameItemFriend"/>
             <TextView
                     android:textColor="@color/light"
                     android:padding="8dp"
                     android:text="9431443"
                     android:textSize="@dimen/txtSmall"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content" android:id="@+id/txtSIdItemFriend"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
